# cathsim-zoo

./: README.md  pyproject.toml
src/cathsim_zoo/: train.py  utils.py
src/cathsim_zoo/loggers/: wandb.py
